--- a/portworx-helm/templates/portworx-ds.yaml
+++ b/portworx-helm/templates/portworx-ds.yaml
@@ -4,11 +4,19 @@ metadata:
   name: portworx
   namespace: kube-system
 spec:
-  minReadySeconds: 0
+  minReadySeconds: 
+   
+  {{- if eq .Values.px.deploymentType | upper | lower | oci }}
   updateStrategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 1
+  
+  {{- else if eq .Values.px.deploymentType | upper | lower | docker }}
+  updateStrategy:
+    type: OnDelete
+  
+  {{- end }}
   template:
     metadata:
       labels:
@@ -29,16 +37,57 @@ spec:
       hostPID: true
       containers:
         - name: portworx
-          image: portworx/oci-monitor:1.2.12.0
+
+          {{- if eq .Values.px.deploymentType | upper | lower | oci }}
+          image: portworx/oci-monitor:{{ required  "A valid Image tag. Should be in the SemVer format" .Values.px.imageTag }}
+
+          {{- else if eq .Values.px.deploymentType | upper | lower | docker }}
+          image: portworx/px-enterprise:{{ required "A valid Image tag. Should be in the SemVer format" .Values.px.imageTag }}
+
+          {{- end }}          
           terminationMessagePath: "/tmp/px-termination-log"
           imagePullPolicy: Always
           args:
-            ["-k", "etcd:http://etc.fake.net:2379", "-c", "test_cluster", "-a", "-f", 
-             "-x", "kubernetes"]
+  
+          {{- with .Values.px.installOptions }}
+            [
+              "-k", 
+              "{{ required .etcd }}", 
+              "-c", 
+              "{{ required .clusterName }}", 
+
+              {{- if .dataInterface }}
+              "-d",
+              "{{ .dataInterface }}",
+              {{- end }}
+
+              {{- if .managementInterface }}
+              "-m",
+              "{{ .managementInterface }}",
+              {{- end }}
+
+              {{- if .drives  }}
+              "-s",
+              "{{ .drives }}"
+              {{- else  }}
+              "-A",
+              {{- end }}
+
+              {{- if .zeroStorage }}
+              "-z",
+              {{- end }}
+
+              {{- if .usefileSystemDrive and eq .usefileSystemDrive true }}
+              "-f",               
+              {{- end }}
+              "-x",
+              "kubernetes"
+             ]
+  
+          {{- end }}   
           env:
             - name: "PX_TEMPLATE_VERSION"
               value: "v2"
-            
           livenessProbe:
             periodSeconds: 30
             initialDelaySeconds: 840 # allow image pull in slow networks
@@ -50,8 +99,16 @@ spec:
             periodSeconds: 10
             httpGet:
               host: 127.0.0.1
+  
+              {{- if eq .Values.px.deploymentType | upper | lower | oci }}
               path: /health
               port: 9015
+  
+              {{- else if eq .Values.px.deploymentType | upper | lower | docker }}
+              path: /v1/cluster/nodehealth
+              port: 9001
+  
+              {{- end }}
           securityContext:
             privileged: true
           volumeMounts:
@@ -63,12 +120,29 @@ spec:
               mountPath: /var/lib/osd:shared
             - name: etcpwx
               mountPath: /etc/pwx
+
+          {{- if eq .Values.px.deploymentType | upper | lower | oci }}
             - name: optpwx
               mountPath: /opt/pwx
             - name: proc1nsmount
               mountPath: /host_proc/1/ns
             - name: sysdmount
               mountPath: /etc/systemd/system
+
+          {{- else if eq .Values.px.deploymentType | upper | lower | docker }}
+            - name: optpwx
+              mountPath: /export_bin
+            - name: dev
+              mountPath: /dev
+            - name: cores
+              mountPath: /var/cores
+            - name: src
+              mountPath: /usr/src
+            - name: dockerplugins
+              mountPath: /run/docker/plugins
+            - name: hostproc
+              mountPath: /hostproc
+          {{- end }}
       restartPolicy: Always
       serviceAccountName: px-account
       volumes:
@@ -84,6 +158,8 @@ spec:
         - name: etcpwx
           hostPath:
             path: /etc/pwx
+        
+        {{- if eq .Values.px.deploymentType | upper | lower | oci }}
         - name: optpwx
           hostPath:
             path: /opt/pwx
@@ -93,3 +169,24 @@ spec:
         - name: sysdmount
           hostPath:
             path: /etc/systemd/system
+
+        {{- else if eq .Values.px.deploymentType | upper | lower | docker }}
+        - name: optpwx
+          hostPath:
+            path: /opt/pwx/bin
+        - name: dev
+          hostPath:
+            path: /dev
+        - name: cores
+          hostPath:
+            path: /var/cores
+        - name: src
+          hostPath:
+            path: /usr/src
+        - name: dockerplugins
+          hostPath:
+            path: /run/docker/plugins
+        - name: hostproc
+          hostPath:
+            path: /proc
+        {{- end }}
