--- a/portworx-helm/values.yaml
+++ b/portworx-helm/values.yaml
@@ -1,5 +1,5 @@
 px:
-  service-account: px-account
+  serviceAccount: px-account
   deploymentType: oci                   # Either OCI / Docker. Defaults to OCI
   imageVersion: 1.2.12.0                # Version of the PX Image. 
   installOptions: 
