--- a/portworx-helm/templates/portworx-ds-zerostorage.yaml
+++ b/portworx-helm/templates/portworx-ds-zerostorage.yaml
@@ -1,9 +1,9 @@
 #Only if Zerostorage is true. 
-{{- if .Values.px.InstallOptions.zeroStorage && eq .Values.px.InstallOptions.zeroStorage true}}
+{{- if (.Values.installOptions.zeroStorage) and (eq .Values.installOptions.zeroStorage true)}}
 #Setting defaults if they are omitted.
-{{ .Values.px.installOptions.runOnMaster | default false}}
-{{ .Values.px.installOptions.zeroStorage | default false}}
-{{ .Values.px.installOptions.usefileSystemDrive | default false}}
+{{ .Values.installOptions.runOnMaster | default false}}
+{{ .Values.installOptions.zeroStorage | default false}}
+{{ .Values.installOptions.usefileSystemDrive | default false}}
 
 apiVersion: extensions/v1beta1
 kind: DaemonSet
@@ -13,13 +13,13 @@ metadata:
 spec:
   minReadySeconds: 0
   
-  {{- if eq (.Values.px.deploymentType | upper | lower) "oci" }}
+  {{- if eq (.Values.deploymentType | upper | lower) "oci" }}
   updateStrategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 1
   
-  {{- else if eq (.Values.px.deploymentType | upper | lower) "docker" }}
+  {{- else if eq (.Values.deploymentType | upper | lower) "docker" }}
   updateStrategy:
     type: OnDelete
   
@@ -51,21 +51,21 @@ spec:
       containers:
         - name: portworx
 
-          {{- if eq (.Values.px.deploymentType | upper | lower) "oci" }}
-          image: portworx/oci-monitor:{{ required  "A valid Image tag. Should be in the SemVer format" .Values.px.imageTag }}
+          {{- if eq (.Values.deploymentType | upper | lower) "oci" }}
+          image: portworx/oci-monitor:{{ required  "A valid Image tag. Should be in the SemVer format" .Values.imageVersion }}
 
-          {{- else if eq (.Values.px.deploymentType | upper | lower) "docker" }}
-          image: portworx/px-enterprise:{{ required "A valid Image tag. Should be in the SemVer format" .Values.px.imageTag }}
+          {{- else if eq (.Values.deploymentType | upper | lower) "docker" }}
+          image: portworx/px-enterprise:{{ required "A valid Image tag. Should be in the SemVer format" .Values.imageVersion }}
 
           {{- end }}          
           terminationMessagePath: "/tmp/px-termination-log"
           imagePullPolicy: Always
           args:
   
-          {{- with .Values.px.installOptions }}
+          {{- with .Values.installOptions }}
             [
               "-k", 
-              "{{ required .etcd }}", 
+              "{{ required .etcdEndpoint }}", 
               "-c", 
               "{{ required .clusterName }}", 
 
@@ -100,11 +100,11 @@ spec:
             httpGet:
               host: 127.0.0.1
   
-              {{- if eq (.Values.px.deploymentType | upper | lower) "oci" }}
+              {{- if eq (.Values.deploymentType | upper | lower) "oci" }}
               path: /health
               port: 9015
   
-              {{- else if eq (.Values.px.deploymentType | upper | lower) "docker" }}
+              {{- else if eq (.Values.deploymentType | upper | lower) "docker" }}
               path: /v1/cluster/nodehealth
               port: 9001
   
@@ -121,7 +121,7 @@ spec:
             - name: etcpwx
               mountPath: /etc/pwx
 
-          {{- if eq (.Values.px.deploymentType | upper | lower) "oci" }}
+          {{- if eq (.Values.deploymentType | upper | lower) "oci" }}
             - name: optpwx
               mountPath: /opt/pwx
             - name: proc1nsmount
@@ -129,7 +129,7 @@ spec:
             - name: sysdmount
               mountPath: /etc/systemd/system
 
-          {{- else if eq (.Values.px.deploymentType | upper | lower) "docker" }}
+          {{- else if eq (.Values.deploymentType | upper | lower) "docker" }}
             - name: optpwx
               mountPath: /export_bin
             - name: dev
@@ -159,7 +159,7 @@ spec:
           hostPath:
             path: /etc/pwx
         
-        {{- if eq (.Values.px.deploymentType | upper | lower) "oci" }}
+        {{- if eq (.Values.deploymentType | upper | lower) "oci" }}
         - name: optpwx
           hostPath:
             path: /opt/pwx
@@ -170,7 +170,7 @@ spec:
           hostPath:
             path: /etc/systemd/system
 
-        {{- else if eq (.Values.px.deploymentType | upper | lower) "docker" }}
+        {{- else if eq (.Values.deploymentType | upper | lower) "docker" }}
         - name: optpwx
           hostPath:
             path: /opt/pwx/bin
