--- a/portworx-helm/templates/portworx-ds.yaml
+++ b/portworx-helm/templates/portworx-ds.yaml
@@ -1,26 +1,22 @@
 #Setting defaults if they are omitted. 
-{{ .Values.px.installOptions.runOnMaster | default false}}
-{{ .Values.px.installOptions.zeroStorage | default false}}
-{{ .Values.px.installOptions.usefileSystemDrive | default false}}
-
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: portworx
   namespace: kube-system
+{{ $runOnMaster := .Values.installOptions.runOnMaster | default false }}
+{{ $zeroStorage := .Values.installOptions.zeroStorage | default false }}
+{{ $usefileSystemDrive := .Values.installOptions.usefileSystemDrive | default false }}
 spec:
   minReadySeconds: 0
-   
-  {{- if eq (.Values.px.deploymentType | upper | lower) "oci" }}
+  {{- if eq (.Values.deploymentType | upper | lower) "oci" }}
   updateStrategy:
     type: RollingUpdate
     rollingUpdate:
       maxUnavailable: 1
-  
-  {{- else if eq (.Values.px.deploymentType | upper | lower) "docker" }}
+  {{- else if eq (.Values.deploymentType | upper | lower) "docker" }}
   updateStrategy:
     type: OnDelete
-  
   {{- end }}
   template:
     metadata:
@@ -34,7 +30,7 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
             - matchExpressions:
-            {{- if eq .Values.px.installOptions.runOnMaster false }}
+            {{- if eq $runOnMaster false }}
               - key: node-role.kubernetes.io/master
                 operator: DoesNotExist
             {{- end }}
@@ -47,21 +43,20 @@ spec:
       containers:
         - name: portworx
 
-          {{- if eq (.Values.px.deploymentType | upper | lower) "oci" }}
-          image: portworx/oci-monitor:{{ required  "A valid Image tag. Should be in the SemVer format" .Values.px.imageTag }}
+          {{- if eq (.Values.deploymentType | upper | lower) "oci" }}
+          image: portworx/oci-monitor:{{ required "A valid Image tag is required in the SemVer format" .Values.imageVersion }}
 
-          {{- else if eq (.Values.px.deploymentType | upper | lower) "docker" }}
-          image: portworx/px-enterprise:{{ required "A valid Image tag. Should be in the SemVer format" .Values.px.imageTag }}
+          {{- else if eq (.Values.deploymentType | upper | lower) "docker" }}
+          image: portworx/px-enterprise:{{ required "A valid Image tag in the SemVer format" .Values.imageVersion }}
 
           {{- end }}          
           terminationMessagePath: "/tmp/px-termination-log"
           imagePullPolicy: Always
           args:
-  
-          {{- with .Values.px.installOptions }}
+          {{- with .Values.installOptions }}
             [
               "-k", 
-              "{{ required "A valid ETCD url in the format etcd:http://<your-etcd-endpoint>:2379 is required" .etcd }}", 
+              "{{ required "A valid ETCD url in the format etcd:http://<your-etcd-endpoint>:2379 is required" .etcdEndpoint }}", 
               "-c", 
               "{{ required "Clustername cannot be empty" .clusterName }}", 
 
@@ -82,14 +77,13 @@ spec:
               "-A",
               {{- end }}
 
-              {{- if eq .usefileSystemDrive true }}
+              {{- if eq $usefileSystemDrive true }}
               "-f",               
               {{- end }}
               "-x",
               "kubernetes"
              ]
-  
-          {{- end }}   
+           {{- end }}   
           env:
             - name: "PX_TEMPLATE_VERSION"
               value: "v2"
@@ -105,11 +99,11 @@ spec:
             httpGet:
               host: 127.0.0.1
   
-              {{- if eq (.Values.px.deploymentType | upper | lower) "oci" }}
+              {{- if eq (.Values.deploymentType | upper | lower) "oci" }}
               path: /health
               port: 9015
   
-              {{- else if eq (.Values.px.deploymentType | upper | lower) "docker" }}
+              {{- else if eq (.Values.deploymentType | upper | lower) "docker" }}
               path: /v1/cluster/nodehealth
               port: 9001
   
@@ -126,7 +120,7 @@ spec:
             - name: etcpwx
               mountPath: /etc/pwx
 
-          {{- if eq (.Values.px.deploymentType | upper | lower) "oci" }}
+          {{- if eq (.Values.deploymentType | upper | lower) "oci" }}
             - name: optpwx
               mountPath: /opt/pwx
             - name: proc1nsmount
@@ -134,7 +128,7 @@ spec:
             - name: sysdmount
               mountPath: /etc/systemd/system
 
-          {{- else if eq (.Values.px.deploymentType | upper | lower) "docker" }}
+          {{- else if eq (.Values.deploymentType | upper | lower) "docker" }}
             - name: optpwx
               mountPath: /export_bin
             - name: dev
@@ -164,7 +158,7 @@ spec:
           hostPath:
             path: /etc/pwx
         
-        {{- if eq (.Values.px.deploymentType | upper | lower) "oci" }}
+        {{- if eq (.Values.deploymentType | upper | lower) "oci" }}
         - name: optpwx
           hostPath:
             path: /opt/pwx
@@ -175,7 +169,7 @@ spec:
           hostPath:
             path: /etc/systemd/system
 
-        {{- else if eq (.Values.px.deploymentType | upper | lower) "docker" }}
+        {{- else if eq (.Values.deploymentType | upper | lower) "docker" }}
         - name: optpwx
           hostPath:
             path: /opt/pwx/bin
