--- a/portworx-helm/templates/portworx-sa.yaml
+++ b/portworx-helm/templates/portworx-sa.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ quote .Values.px.serviceAccount }}
+  name: {{ quote .Values.serviceAccount }}
   namespace: kube-system
