--- a/portworx-helm/values.yaml
+++ b/portworx-helm/values.yaml
@@ -1,9 +1,8 @@
-px:
   serviceAccount: px-account
   deploymentType: oci                   # Either OCI / Docker. Defaults to OCI
   imageVersion: 1.2.12.0                # Version of the PX Image. 
   installOptions: 
-    etcd:                               # The ETCD endpoint. Should be in the format etcd:http://<your-etcd-endpoint>:2379
+    etcdEndpoint: etcd:http://<your-etcd-endpoint>:2379                       # The ETCD endpoint. Should be in the format etcd:http://<your-etcd-endpoint>:2379
     clusterName: mycluster              # This is the default. please change it to your cluster name.  
     runOnMaster: false                  # Instructs Portworx to be run on the kubernetes master as well. Defaults to false.  
     zeroStorage: false                  # true/false Instructs PX to run in Zero Storage mode. 
@@ -21,3 +20,6 @@ px:
 # KVDB Options. 
 # Lighthouse Token 
 # Environment Variables
+# Openshift
+# CoreOS
+# 
