--- a/portworx-helm/values.yaml
+++ b/portworx-helm/values.yaml
@@ -1,13 +1,22 @@
   serviceAccount: px-account
   deploymentType: oci                   # Either OCI / Docker. Defaults to OCI
   imageVersion: 1.2.12.0                # Version of the PX Image. 
+  openshiftInstall: false               # Defaults to false for Openshift install.
+  isTargetOSCoreOS: false               # Is your target OS CoreOS? Defaults to false.
   installOptions: 
     etcdEndpoint: etcd:http://<your-etcd-endpoint>:2379                       # The ETCD endpoint. Should be in the format etcd:http://<your-etcd-endpoint>:2379
     clusterName: mycluster              # This is the default. please change it to your cluster name.  
     runOnMaster: false                  # Instructs Portworx to be run on the kubernetes master as well. Defaults to false.  
-    zeroStorage: false                  # true/false Instructs PX to run in Zero Storage mode. 
+    zeroStorage: true                   # true/false Instructs PX to run in Zero Storage mode. 
     usefileSystemDrive: false           # true/false Instructs PX to use an unmounted Drive even if it has a filesystem.
-
+    kubernetesVersion: 1.7.8            # Defaults to 1.7.8
+    secretType: none                    # Defaults to None, but can be AWS / KVDB / Vault.
+  etcdOptions:
+    credentials: none                   # Should be in the form of username:password  
+    ca: none                            # Should be /path/to/server.ca
+    cert: none
+    key: none
+    acl: none
 # Below options are supported other than the defaults. 
 # Please uncomment and specify values for these options as per your requirements.      
 
