--- a/portworx-helm/templates/portworx-ds.yaml
+++ b/portworx-helm/templates/portworx-ds.yaml
@@ -2,6 +2,15 @@
 {{ $runOnMaster := .Values.installOptions.runOnMaster | default false }}
 {{ $zeroStorage := .Values.installOptions.zeroStorage | default false }}
 {{ $usefileSystemDrive := .Values.installOptions.usefileSystemDrive | default false }}
+{{ $drives := .Values.installOptions.drives | default "none" }}
+{{ $lighthouseToken := .Values.installOptions.lighthouse.token | default "none" }}
+{{ $lighthouseEnvVars := .Values.installOptions.lighthouse.envVars | default "none" }}
+
+{{ $etcdCredentials := .Values.installOptions.etcd.credentials | default "none:none" }}
+{{ $etcdCA := .Values.installOptions.etcd.ca | default "none" }}
+{{ $etcdCert := .Values.installOptions.etcd.cert | default "none" }}
+{{ $etcdKey := .Values.installOptions.etcd.key | default "none" }}
+{{ $etcdACL := .Values.installOptions.etcd.acl | default "none" }}
 
 apiVersion: extensions/v1beta1
 kind: DaemonSet
@@ -56,6 +65,17 @@ spec:
           args:
           {{- with .Values.installOptions }}
             [
+              {{- if eq $drives "none"  }}
+              "-A",
+              {{- else }}
+              "-s",
+              "{{ .drives }}",
+              {{- end }}
+
+              {{- if eq $usefileSystemDrive true }}
+              "-f",               
+              {{- end }}              
+
               "-k", 
               "{{ required "A valid ETCD url in the format etcd:http://<your-etcd-endpoint>:2379 is required" .etcdEndpoint }}", 
               "-c", 
@@ -71,16 +91,36 @@ spec:
               "{{ .managementInterface }}",
               {{- end }}
 
-              {{- if .drives  }}
-              "-s",
-              "{{ .drives }}"
-              {{- else  }}
-              "-A",
+              {{- if not (eq $lighthouseToken "none") }}
+              "-t",
+              "{{ $lighthouseToken }}",
               {{- end }}
 
-              {{- if eq $usefileSystemDrive true }}
-              "-f",               
+              {{- if not (eq $etcdCredentials "none:none") }}
+              "-userpwd",
+              "{{ $etcdCredentials }}",
               {{- end }}
+
+              {{- if not (eq $etcdCA "none") }}
+              "-ca",
+              "{{ $etcdCA }}",
+              {{- end }}
+
+              {{- if not (eq $etcdCert "none") }}
+              "-cert",
+              "{{ $etcdCert }}",
+              {{- end }}
+
+              {{- if not (eq $etcdKey "none") }}
+              "-key",
+              "{{ $etcdKey }}",
+              {{- end }}              
+
+              {{- if not (eq $etcdACL "none") }}
+              "-acltoken",
+              "{{ $etcdACL }}",
+              {{- end }}              
+
               "-x",
               "kubernetes"
              ]
