--- a/portworx-helm/templates/rbac-config.yaml
+++ b/portworx-helm/templates/rbac-config.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -5,7 +6,7 @@ metadata:
   namespace: kube-system
 ---  
 kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: {{ template "rbac.apiVersion" . }}
 metadata:
    name: node-get-put-list-role
 rules:
@@ -20,14 +21,13 @@ rules:
   verbs: ["get", "list"]
 ---
 kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: {{ template "rbac.apiVersion" . }}
 metadata:
   name: node-role-binding
 subjects:
 - kind: ServiceAccount
   name: {{ quote .Values.serviceAccount }}
   namespace: kube-system
-  apiVersion: v1
 roleRef:
   kind: ClusterRole
   name: node-get-put-list-role
