--- a/portworx-helm/values.yaml
+++ b/portworx-helm/values.yaml
@@ -1,34 +1,33 @@
-  serviceAccount: px-account
-  deploymentType: oci                   # Either OCI / Docker. Defaults to OCI
-  imageVersion: 1.2.12.0                # Version of the PX Image. 
-  openshiftInstall: false               # Defaults to false for Openshift install.
-  isTargetOSCoreOS: false               # Is your target OS CoreOS? Defaults to false.
-  installOptions: 
-    etcdEndpoint: etcd:http://<your-etcd-endpoint>:2379                       # The ETCD endpoint. Should be in the format etcd:http://<your-etcd-endpoint>:2379
-    clusterName: mycluster              # This is the default. please change it to your cluster name.  
-    runOnMaster: false                  # Instructs Portworx to be run on the kubernetes master as well. Defaults to false.  
-    zeroStorage: true                   # true/false Instructs PX to run in Zero Storage mode. 
-    usefileSystemDrive: false           # true/false Instructs PX to use an unmounted Drive even if it has a filesystem.
-    kubernetesVersion: 1.7.8            # Defaults to 1.7.8
-    secretType: none                    # Defaults to None, but can be AWS / KVDB / Vault.
-  etcdOptions:
-    credentials: none                   # Should be in the form of username:password  
-    ca: none                            # Should be /path/to/server.ca
-    cert: none
-    key: none
-    acl: none
-# Below options are supported other than the defaults. 
 # Please uncomment and specify values for these options as per your requirements.      
 
-    #drives:                             # Comma seperated list of drives. Will be defaulted to null if there are no values
-    #dataInterface:                      # Name of the interface <ethX>
-    #managementInterface:                # Name of the interface <ethX>
-     
+  serviceAccount: px-account
+  deploymentType: oci                     # Either OCI / Docker. Defaults to OCI
+  imageVersion: 1.2.12.0                  # Version of the PX Image. 
+  openshiftInstall: false                 # Defaults to false for installing Portworx on Openshift .
+  isTargetOSCoreOS: false                 # Is your target OS CoreOS? Defaults to false.
 
-# TODO
-# KVDB Options. 
-# Lighthouse Token 
-# Environment Variables
-# Openshift
-# CoreOS
-# 
+  installOptions: 
+    etcdEndpoint: etcd:http://<your-etcd-endpoint>:2379                       # The ETCD endpoint. Should be in the format etcd:http://<your-etcd-endpoint>:2379
+    clusterName: mycluster                # This is the default. please change it to your cluster name.  
+    runOnMaster: false                    # Instructs Portworx to be run on the kubernetes master as well. Defaults to false.  
+    zeroStorage: true                     # true/false Instructs PX to run in Zero Storage mode. 
+    usefileSystemDrive: false             # true/false Instructs PX to use an unmounted Drive even if it has a filesystem.
+    kubernetesVersion: 1.7.8              # Defaults to 1.7.8
+    secretType: none                      # Defaults to None, but can be AWS / KVDB / Vault.
+    drives: none                          # Defaults to use -A switch. 
+    dataInterface: none                   # Name of the interface <ethX>
+    managementInterface: none             # Name of the interface <ethX>
+    
+    lighthouse:
+      token: none                         # defaults to no token. 
+      envVars: none                       # comma seperated environment variables. 
+    
+    etcd:
+      credentials: none:none              # Username and password for ETCD authentication in the form user:password   
+      ca: none                            # Location of CA file for ETCD authentication. Should be /path/to/server.ca
+      cert: none                          # Location of certificate for ETCD authentication. Should be /path/to/server.crt
+      key: none                           # Location of certificate key for ETCD authentication Should be /path/to/servery.key
+      acl: none                           # ACL token value used for Consul authentication. (example: 398073a8-5091-4d9c-871a-bbbeb030d1f6)
+
+#TODO
+# Write a Helper Template to dynamically generate envVars passed for Lighthouse.      
