Adding README and minor fixes

--- a/portworx-helm/templates/portworx-ds-zerostorage.yaml
+++ b/portworx-helm/templates/portworx-ds-zerostorage.yaml
@@ -2,13 +2,17 @@
 {{- if (.Values.installOptions.zeroStorage) and (eq .Values.installOptions.zeroStorage true)}}
 
 #Setting defaults if they are omitted.
+{{ $dataInterface := .Values.installOptions.dataInterface | default "none" }}
+{{ $managementInterface := .Values.installOptions.managementInterface | default "none" }}
+
 {{ $lighthouseToken := .Values.installOptions.lighthouse.token | default "none" }}
 {{ $lighthouseEnvVars := .Values.installOptions.lighthouse.envVars | default "none" }}
+
 {{ $etcdCredentials := .Values.installOptions.etcd.credentials | default "none:none" }}
 {{ $etcdCA := .Values.installOptions.etcd.ca | default "none" }}
 {{ $etcdCert := .Values.installOptions.etcd.cert | default "none" }}
 {{ $etcdKey := .Values.installOptions.etcd.key | default "none" }}
-{{ $etcdACL := .Values.installOptions.etcd.acl | default "none" }}
+{{- $etcdACL := .Values.installOptions.etcd.acl | default "none" -}}
 
 apiVersion: extensions/v1beta1
 kind: DaemonSet
@@ -34,6 +38,7 @@ spec:
       labels:
         app:  portworx-zerostorage
         name: portworx
+# {{ template "px.labels" . }}  
       namespace: kube-system
     spec:
       tolerations:
@@ -74,15 +79,16 @@ spec:
               "-c", 
               "{{ required "Clustername cannot be empty" .clusterName }}", 
 
-              {{- if .dataInterface }}
+              {{- if not (eq $dataInterface "none") }}
               "-d",
-              "{{ .dataInterface }}",
+              "{{ $dataInterface }}",
               {{- end }}
 
-              {{- if .managementInterface }}
+              {{- if not (eq $managementInterface "none") }}
               "-m",
-              "{{ .managementInterface }}",
+              "{{ $managementInterface }}",
               {{- end }}
+
 
               {{- if not (eq $lighthouseToken "none") }}
               "-t",
