--- a/portworx-helm/values.yaml
+++ b/portworx-helm/values.yaml
@@ -2,7 +2,7 @@
 
   serviceAccount: px-account
   deploymentType: oci                     # Either OCI / Docker. Defaults to OCI
-  imageVersion: 1.2.12.0                  # Version of the PX Image. 
+  imageVersion: latest                  # Version of the PX Image. 
   openshiftInstall: false                 # Defaults to false for installing Portworx on Openshift .
   isTargetOSCoreOS: false                 # Is your target OS CoreOS? Defaults to false.
 
@@ -10,7 +10,7 @@
     etcdEndpoint: etcd:http://<your-etcd-endpoint>:2379                       # The ETCD endpoint. Should be in the format etcd:http://<your-etcd-endpoint>:2379
     clusterName: mycluster                # This is the default. please change it to your cluster name.  
     runOnMaster: false                    # Instructs Portworx to be run on the kubernetes master as well. Defaults to false.  
-    zeroStorage: true                     # true/false Instructs PX to run in Zero Storage mode. 
+    zeroStorage: false                     # true/false Instructs PX to run in Zero Storage mode. 
     usefileSystemDrive: false             # true/false Instructs PX to use an unmounted Drive even if it has a filesystem.
     kubernetesVersion: 1.7.8              # Defaults to 1.7.8
     secretType: none                      # Defaults to None, but can be AWS / KVDB / Vault.
