draft commit for adding a helper function for labels

--- a/portworx-helm/templates/portworx-ds-zerostorage.yaml
+++ b/portworx-helm/templates/portworx-ds-zerostorage.yaml
@@ -38,7 +38,7 @@ spec:
       labels:
         app:  portworx-zerostorage
         name: portworx
-# {{ template "px.labels" . }}  
+        # {{- include "px.labels" . | indent 8 }}  
       namespace: kube-system
     spec:
       tolerations:
