--- a/portworx-helm/templates/portworx-ds-zerostorage.yaml
+++ b/portworx-helm/templates/portworx-ds-zerostorage.yaml
@@ -1,17 +1,17 @@
 #Only if Zerostorage is true. 
-{{- if (.Values.installOptions.zeroStorage) and (eq .Values.installOptions.zeroStorage true)}}
+{{- if (.Values.installOptions.zeroStorage) and (eq .Values.installOptions.zeroStorage true) -}}
 
 #Setting defaults if they are omitted.
-{{ $dataInterface := .Values.installOptions.dataInterface | default "none" }}
-{{ $managementInterface := .Values.installOptions.managementInterface | default "none" }}
+{{- $dataInterface := .Values.installOptions.dataInterface | default "none" -}}
+{{- $managementInterface := .Values.installOptions.managementInterface | default "none" -}}
 
-{{ $lighthouseToken := .Values.installOptions.lighthouse.token | default "none" }}
-{{ $lighthouseEnvVars := .Values.installOptions.lighthouse.envVars | default "none" }}
+{{- $lighthouseToken := .Values.installOptions.lighthouse.token | default "none" -}}
+{{- $lighthouseEnvVars := .Values.installOptions.lighthouse.envVars | default "none" -}}
 
-{{ $etcdCredentials := .Values.installOptions.etcd.credentials | default "none:none" }}
-{{ $etcdCA := .Values.installOptions.etcd.ca | default "none" }}
-{{ $etcdCert := .Values.installOptions.etcd.cert | default "none" }}
-{{ $etcdKey := .Values.installOptions.etcd.key | default "none" }}
+{{- $etcdCredentials := .Values.installOptions.etcd.credentials | default "none:none" -}}
+{{- $etcdCA := .Values.installOptions.etcd.ca | default "none" -}}
+{{- $etcdCert := .Values.installOptions.etcd.cert | default "none" -}}
+{{- $etcdKey := .Values.installOptions.etcd.key | default "none" -}}
 {{- $etcdACL := .Values.installOptions.etcd.acl | default "none" -}}
 
 apiVersion: extensions/v1beta1
@@ -75,7 +75,7 @@ spec:
           {{- with .Values.installOptions }}
             [
               "-k", 
-              "{{ required "A valid ETCD url in the format etcd:http://<your-etcd-endpoint>:2379 is required" .etcdEndpoint }}", 
+              "{{ required "A valid ETCD url in the format etcd:http://<your-etcd-endpoint>:2379 is required" .etcdEndPoint }}", 
               "-c", 
               "{{ required "Clustername cannot be empty" .clusterName }}", 
 
