--- a/portworx-helm/templates/portworx-ds.yaml
+++ b/portworx-helm/templates/portworx-ds.yaml
@@ -1,21 +1,23 @@
 #Setting defaults if they are omitted. 
-{{ $runOnMaster := .Values.installOptions.runOnMaster | default false }}
-{{ $zeroStorage := .Values.installOptions.zeroStorage | default false }}
-{{ $usefileSystemDrive := .Values.installOptions.usefileSystemDrive | default false }}
-{{ $drives := .Values.installOptions.drives | default "none" }}
-{{ $usedrivesAndPartitions := .Values.installOptions.usedrivesAndPartitions | default false }}
+{{- $runOnMaster := .Values.installOptions.runOnMaster | default false -}}
+{{- $zeroStorage := .Values.installOptions.zeroStorage | default false -}}
+{{- $usefileSystemDrive := .Values.installOptions.usefileSystemDrive | default false -}}
+{{- $drives := .Values.installOptions.drives | default "none" -}}
+{{- $usedrivesAndPartitions := .Values.installOptions.usedrivesAndPartitions | default false -}}
+{{- $secretType := .Values.installOptions.usedrivesAndPartitions | default "none" -}}
 
-{{ $dataInterface := .Values.installOptions.dataInterface | default "none" }}
-{{ $managementInterface := .Values.installOptions.managementInterface | default "none" }}
+{{- $dataInterface := .Values.installOptions.dataInterface | default "none" -}}
+{{- $managementInterface := .Values.installOptions.managementInterface | default "none" -}}
 
-{{ $lighthouseToken := .Values.installOptions.lighthouse.token | default "none" }}
-{{ $lighthouseEnvVars := .Values.installOptions.lighthouse.envVars | default "none" }}
+{{- $lighthouseToken := .Values.installOptions.lighthouse.token | default "none" -}}
+{{- $lighthouseEnvVars := .Values.installOptions.lighthouse.envVars | default "none" -}}
 
-{{ $etcdCredentials := .Values.installOptions.etcd.credentials | default "none:none" }}
-{{ $etcdCA := .Values.installOptions.etcd.ca | default "none" }}
-{{ $etcdCert := .Values.installOptions.etcd.cert | default "none" }}
-{{ $etcdKey := .Values.installOptions.etcd.key | default "none" }}
+{{- $etcdCredentials := .Values.installOptions.etcd.credentials | default "none:none" -}}
+{{- $etcdCA := .Values.installOptions.etcd.ca | default "none" -}}
+{{- $etcdCert := .Values.installOptions.etcd.cert | default "none" -}}
+{{- $etcdKey := .Values.installOptions.etcd.key | default "none" -}}
 {{- $etcdACL := .Values.installOptions.etcd.acl | default "none" -}}
+
 
 apiVersion: extensions/v1beta1
 kind: DaemonSet
@@ -47,6 +49,9 @@ spec:
             nodeSelectorTerms:
             - matchExpressions:
             {{- if eq $runOnMaster false }}
+              - key: node-role.kubernetes.io/master
+                operator: DoesNotExist
+            {{- else if (eq $runOnMaster true) and (eq $zeroStorage true) }}
               - key: node-role.kubernetes.io/master
                 operator: DoesNotExist
             {{- end }}
@@ -84,11 +89,17 @@ spec:
               "-A",
                 {{- end -}}
               {{- end -}}              
-
+  
               "-k", 
-              "{{ required "A valid ETCD url in the format etcd:http://<your-etcd-endpoint>:2379 is required" .etcdEndpoint }}", 
+              "{{ required "A valid ETCD url in the format etcd:http://<your-etcd-endpoint>:2379 is required" .etcdEndPoint }}", 
               "-c", 
               "{{ required "Clustername cannot be empty" .clusterName }}", 
+
+              {{- if not (eq $secretType "none") }}
+              "-secret_type",
+              "{{ $secretType }}",
+              {{- end -}}
+
 
               {{- if not (eq $dataInterface "none") }}
               "-d",
