--- a/portworx-helm/templates/portworx-ds.yaml
+++ b/portworx-helm/templates/portworx-ds.yaml
@@ -1,22 +1,22 @@
 #Setting defaults if they are omitted. 
-{{- $runOnMaster := .Values.installOptions.runOnMaster | default false -}}
-{{- $zeroStorage := .Values.installOptions.zeroStorage | default false -}}
-{{- $usefileSystemDrive := .Values.installOptions.usefileSystemDrive | default false -}}
-{{- $drives := .Values.installOptions.drives | default "none" -}}
-{{- $usedrivesAndPartitions := .Values.installOptions.usedrivesAndPartitions | default false -}}
-{{- $secretType := .Values.installOptions.usedrivesAndPartitions | default "none" -}}
+{{- $runOnMaster := .Values.installOptions.runOnMaster | default false }}
+{{- $zeroStorage := .Values.installOptions.zeroStorage | default false }}
+{{- $usefileSystemDrive := .Values.installOptions.usefileSystemDrive | default false }}
+{{- $drives := .Values.installOptions.drives | default "none" }}
+{{- $usedrivesAndPartitions := .Values.installOptions.usedrivesAndPartitions | default false }}
+{{- $secretType := .Values.installOptions.secretType | default "none" }}
 
-{{- $dataInterface := .Values.installOptions.dataInterface | default "none" -}}
-{{- $managementInterface := .Values.installOptions.managementInterface | default "none" -}}
+{{- $dataInterface := .Values.installOptions.dataInterface | default "none" }}
+{{- $managementInterface := .Values.installOptions.managementInterface | default "none" }}
 
-{{- $lighthouseToken := .Values.installOptions.lighthouse.token | default "none" -}}
-{{- $lighthouseEnvVars := .Values.installOptions.lighthouse.envVars | default "none" -}}
+{{- $lighthouseToken := .Values.installOptions.lighthouse.token | default "none" }}
+{{- $lighthouseEnvVars := .Values.installOptions.lighthouse.envVars | default "none" }}
 
-{{- $etcdCredentials := .Values.installOptions.etcd.credentials | default "none:none" -}}
-{{- $etcdCA := .Values.installOptions.etcd.ca | default "none" -}}
-{{- $etcdCert := .Values.installOptions.etcd.cert | default "none" -}}
-{{- $etcdKey := .Values.installOptions.etcd.key | default "none" -}}
-{{- $etcdACL := .Values.installOptions.etcd.acl | default "none" -}}
+{{- $etcdCredentials := .Values.installOptions.etcd.credentials | default "none:none" }}
+{{- $etcdCA := .Values.installOptions.etcd.ca | default "none" }}
+{{- $etcdCert := .Values.installOptions.etcd.cert | default "none" }}
+{{- $etcdKey := .Values.installOptions.etcd.key | default "none" }}
+{{- $etcdACL := .Values.installOptions.etcd.acl | default "none" }}
 
 
 apiVersion: extensions/v1beta1
@@ -99,7 +99,6 @@ spec:
               "-secret_type",
               "{{ $secretType }}",
               {{- end -}}
-
 
               {{- if not (eq $dataInterface "none") }}
               "-d",
