--- a/portworx-helm/values.yaml
+++ b/portworx-helm/values.yaml
@@ -8,7 +8,7 @@
   isTargetOSCoreOS: false                 # Is your target OS CoreOS? Defaults to false.
 
   installOptions: 
-    etcdEndPoint:                         # The ETCD endpoint. Should be in the format etcd:http://<your-etcd-endpoint>:2379 
+    etcdEndPoint: etcd:http://<your-etcd-endpoint>:2379                         # The ETCD endpoint. Should be in the format etcd:http://<your-etcd-endpoint>:2379 
                                           # the default value is empty since it requires to be explicity set using either the --set option of -f values.yaml.  
     clusterName: mycluster                # This is the default. please change it to your cluster name.  
     runOnMaster: false                    # Instructs Portworx to be run on the kubernetes master as well. Defaults to false.  
