Pre Install hook

--- a/portworx-helm/templates/etcd-preinstall-hook.yaml
+++ b/portworx-helm/templates/etcd-preinstall-hook.yaml
@@ -1,29 +1,24 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: px-etcd-preinstall-hook-"{{.Release.Name}}"
+  name: px-etcd-preinstall-hook
   labels:
     heritage: {{.Release.Service | quote }}
     release: {{.Release.Name | quote }}
     chart: "{{.Chart.Name}}-{{.Chart.Version}}"
   annotations:
-    # This is what defines this resource as a hook. Without this line, the
-    # job is considered part of the release.
     "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "-5"
     "helm.sh/hook-delete-policy": hook-succeeded
 spec:
+  activeDeadlineSeconds: 30
+  backofflimit: 2    
   template:
-    metadata:
-      name: px-etcd-preinstall-hook-"{{.Release.Name}}"
-      labels:
-        heritage: {{.Release.Service | quote }}
-        release: {{.Release.Name | quote }}
-        chart: "{{.Chart.Name}}-{{.Chart.Version}}"
     spec:
       restartPolicy: Never
       containers:
       - name: pre-install-job
-        image: "hrishi/px-etcd-preinstall-hook"
+        imagePullPolicy : Always
+        image: "hrishi/px-etcd-preinstall-hook:v1"
         command: ['/bin/sh']
-        args: ['-c','/usr/bin/etcdStatus.sh', "{{ .Values.installOptions.etcdEndPoint }}"]
+        args: ['/usr/bin/etcdStatus.sh',{{ .Values.installOptions.etcdEndPoint }}]
